--- a/client/src/components/content/left-content/LeftContent.scss
+++ b/client/src/components/content/left-content/LeftContent.scss
@@ -59,5 +59,6 @@
         height: 500px;
         width: 100%;
         overflow: scroll;
+        scrollbar-width: none;
     }
 }
