--- a/client/src/components/content/main-content/MainContent.scss
+++ b/client/src/components/content/main-content/MainContent.scss
@@ -11,6 +11,7 @@
         height: 480px;
         width: 100%;
         overflow: scroll;
+        scrollbar-width: none;
     }
 
     .default-album-cover {
