--- a/client/src/components/content/right-content/RightContent.scss
+++ b/client/src/components/content/right-content/RightContent.scss
@@ -15,5 +15,6 @@
         justify-content: space-around;
         grid-gap: 5px;
         overflow: scroll;
+        scrollbar-width: none;
     }
 }
