--- a/client/src/components/search-result/SearchResult.scss
+++ b/client/src/components/search-result/SearchResult.scss
@@ -2,10 +2,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 90%;
+    width: 95%;
     cursor: pointer;
     margin: 5px 0;
-    border-radius: 20px;
+    border-radius: 10px;
 
     &:hover{
         background-color: #1db954;
@@ -16,7 +16,7 @@
         height: 32px;
     }
     .track-name{
-        padding: 0 10px;
+        padding: 0 15px;
     }
 
 }
